@@ -30,8 +30,8 @@
 extern zbar_symbol_t *_zbar_image_scanner_alloc_sym(zbar_image_scanner_t*,
                                                     zbar_symbol_type_t,
                                                     int);
-extern void _zbar_image_scanner_cache_sym(zbar_image_scanner_t*,
-                                          zbar_symbol_t*);
+extern void _zbar_image_scanner_add_sym(zbar_image_scanner_t*,
+                                        zbar_symbol_t*);
 extern void _zbar_image_scanner_recycle_syms(zbar_image_scanner_t*,
                                              zbar_symbol_t*);
 
