@@ -73,6 +73,10 @@ int _zbar_process_image (zbar_processor_t *proc,
         if(!tmp)
             goto error;
 
+        if(proc->syms) {
+            zbar_symbol_set_ref(proc->syms, -1);
+            proc->syms = NULL;
+        }
         zbar_image_scanner_recycle_image(proc->scanner, img);
         int nsyms = zbar_scan_image(proc->scanner, tmp);
         _zbar_image_swap_symbols(img, tmp);
@@ -81,6 +85,10 @@ int _zbar_process_image (zbar_processor_t *proc,
         tmp = NULL;
         if(nsyms < 0)
             goto error;
+
+        proc->syms = zbar_image_scanner_get_results(proc->scanner);
+        if(proc->syms)
+            zbar_symbol_set_ref(proc->syms, 1);
 
         if(_zbar_verbosity >= 8) {
             const zbar_symbol_t *sym = zbar_image_first_symbol(img);
@@ -138,8 +146,10 @@ error:
 int _zbar_processor_handle_input (zbar_processor_t *proc,
                                   int input)
 {
+    int event = EVENT_INPUT;
     switch(input) {
     case -1:
+        event |= EVENT_CANCELED;
         _zbar_processor_set_visible(proc, 0);
         err_capture(proc, SEV_WARNING, ZBAR_ERR_CLOSED, __func__,
                     "user closed display window");
@@ -167,7 +177,10 @@ int _zbar_processor_handle_input (zbar_processor_t *proc,
 
     _zbar_mutex_lock(&proc->mutex);
     proc->input = input;
-    _zbar_processor_notify(proc, EVENT_INPUT);
+    if(input == -1 && proc->visible && proc->streaming)
+        /* also cancel outstanding output waiters */
+        event |= EVENT_OUTPUT;
+    _zbar_processor_notify(proc, event);
     _zbar_mutex_unlock(&proc->mutex);
     return(input);
 }
@@ -442,9 +455,10 @@ void zbar_processor_set_userdata (zbar_processor_t *proc,
 
 void *zbar_processor_get_userdata (const zbar_processor_t *proc)
 {
-    _zbar_mutex_lock(&((zbar_processor_t*)proc)->mutex);
+    zbar_processor_t *ncproc = (zbar_processor_t*)proc;
+    _zbar_mutex_lock(&ncproc->mutex);
     void *userdata = (void*)proc->userdata;
-    _zbar_mutex_unlock(&((zbar_processor_t*)proc)->mutex);
+    _zbar_mutex_unlock(&ncproc->mutex);
     return(userdata);
 }
 
@@ -534,6 +548,18 @@ int zbar_processor_set_visible (zbar_processor_t *proc,
     return(rc);
 }
 
+const zbar_symbol_set_t*
+zbar_processor_get_results (const zbar_processor_t *proc)
+{
+    zbar_processor_t *ncproc = (zbar_processor_t*)proc;
+    proc_enter(ncproc);
+    const zbar_symbol_set_t *syms = proc->syms;
+    if(syms)
+        zbar_symbol_set_ref(syms, 1);
+    proc_leave(ncproc);
+    return(syms);
+}
+
 int zbar_processor_user_wait (zbar_processor_t *proc,
                               int timeout)
 {
@@ -546,12 +572,13 @@ int zbar_processor_user_wait (zbar_processor_t *proc,
         rc = _zbar_processor_wait(proc, EVENT_INPUT,
                                   _zbar_timer_init(&timer, timeout));
     }
-    if(rc > 0)
-        rc = proc->input;
 
     if(!proc->visible)
         rc = err_capture(proc, SEV_WARNING, ZBAR_ERR_CLOSED, __func__,
                          "display window not available for input");
+
+    if(rc > 0)
+        rc = proc->input;
 
     _zbar_mutex_lock(&proc->mutex);
     proc_leave(proc);
@@ -602,6 +629,7 @@ int zbar_process_one (zbar_processor_t *proc,
                       int timeout)
 {
     proc_enter(proc);
+    int streaming = proc->streaming;
     _zbar_mutex_unlock(&proc->mutex);
 
     int rc = 0;
@@ -611,15 +639,17 @@ int zbar_process_one (zbar_processor_t *proc,
         goto done;
     }
 
-    rc = zbar_processor_set_active(proc, 1);
-    if(rc)
-        goto done;
+    if(!streaming) {
+        rc = zbar_processor_set_active(proc, 1);
+        if(rc)
+            goto done;
+    }
 
     zbar_timer_t timer;
     rc = _zbar_processor_wait(proc, EVENT_OUTPUT,
                               _zbar_timer_init(&timer, timeout));
 
-    if(zbar_processor_set_active(proc, 0))
+    if(!streaming && zbar_processor_set_active(proc, 0))
         rc = -1;
 
  done:
